# terminal

./: .gitattributes  .gitignore  .mailmap  .travis.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  README.md  terminal.desktop  terminal.qbs
.github/workflows/: build.yml
.github/workflows/scripts/: build-deps
.reuse/: dep5
.travis/: build.sh
.tx/: config  sources.json
app/: ActionHandler.h  CMakeLists.txt  app.qbs  fontfamiliesmodel.cpp  fontfamiliesmodel.h  main.cpp  terminal.qrc
app/qml/: AddPasswordDialog.qml  CommandItem.qml  ConfirmCloseDialog.qml  PasswordsDialog.qml  Settings.qml  SettingsDialog.qml  SudoWarningDialog.qml  TabSelector.qml  TerminalTab.qml  main.qml
data/: CMakeLists.txt  data.qbs  io.liri.Terminal.appdata.xml  io.liri.Terminal.desktop  io.liri.Terminal.gschema.xml  io.papyros.Terminal.appdata.xml  io.papyros.Terminal.desktop
data/color-schemes/: Material.colorscheme  Ubuntu.colorscheme
imports/: CMakeLists.txt
imports/terminal/: CMakeLists.txt  ksession.cpp  ksession.h  qmldir  qmltermwidget_plugin.cpp  qmltermwidget_plugin.h  terminal.qbs
lib/: BlockArray.cpp  CMakeLists.txt  CharacterColor.h  ColorScheme.h  Emulation.h  KeyboardTranslator.cpp  ProcessInfo.cpp  Screen.cpp  Session.cpp  Session.h  TerminalDisplay.cpp  TerminalDisplay.h  Vt102Emulation.cpp  kpty.cpp  lib.qbs  tools.cpp
src/: ActionHandler.cpp  ActionHandler.h  CMakeLists.txt  clipboard.cpp  clipboard.h  io.liri.Terminal.gschema.xml  liri.schema  main.cpp  papyros-terminal.qrc  papyros.schema
src/app/: ActionHandler.cpp  CMakeLists.txt  fontfamiliesmodel.cpp  fontfamiliesmodel.h  io.liri.Terminal.desktop  io.liri.Terminal.desktop.in  main.cpp  terminal.qrc
src/app/qml/: AddPasswordDialog.qml  PasswordsDialog.qml  Settings.qml  SudoWarningDialog.qml  TerminalTab.qml  main.qml
src/app/translations/: io.liri.Terminal_ca.desktop  io.liri.Terminal_da.desktop  io.liri.Terminal_fr.desktop  io.liri.Terminal_pl.desktop  io.liri.Terminal_pt_BR.desktop  io.liri.Terminal_ru.desktop  terminal.ts  terminal_da.ts  terminal_fr.ts  terminal_pl.ts  terminal_pt_BR.ts
src/imports/terminal/: CMakeLists.txt  QMLTermScrollbar.qml  ksession.h  qmltermwidget_plugin.cpp  terminal.qbs
src/lib/: CMakeLists.txt  ColorScheme.cpp  Session.cpp  TerminalDisplay.cpp  TerminalDisplay.h  kpty.cpp  lib.qbs  qtermwidget.cpp  qtermwidget.h  utils.cpp  utils.h
src/qml/: AddPasswordDialog.qml  CommandItem.qml  ConfirmCloseDialog.qml  PasswordsDialog.qml  Settings.qml  SettingsDialog.qml  SudoWarningDialog.qml  TerminalTab.qml  main.qml
translations/: io.liri.Terminal_lt.desktop  io.liri.Terminal_tr.desktop  terminal.ts  terminal_ca.ts  terminal_da.ts  terminal_de.ts  terminal_es.ts  terminal_fr.ts  terminal_it.ts  terminal_lt.ts  terminal_nl.ts  terminal_pl.ts  terminal_pt_BR.ts  terminal_ru.ts  terminal_tr.ts
translations/data/desktop/: ca.po  da.po  de.po  desktop.pot  fr.po  it.po  lt.po  nl.po  pl.po  pt_BR.po  ru.po  tr.po
